Add tests module, move board game logic to the entity class