@@ -1,6 +1,8 @@
 package pl.lukok.asudoku.entity;
 
+import android.graphics.Point;
 import android.util.Log;
+import pl.lukok.asudoku.SudokuUtil;
 
 public class SudokuBoard {
 
@@ -17,11 +19,11 @@ public class SudokuBoard {
 
     private void init() {
 
-        this.setBoard(new SudokuField[SudokuBoard.FIELD_NUM][SudokuBoard.FIELD_NUM]);
+        setBoard(new SudokuField[SudokuBoard.FIELD_NUM][SudokuBoard.FIELD_NUM]);
 
         for(int x = 0; x < SudokuBoard.FIELD_NUM; x++) {
             for(int y = 0; y < SudokuBoard.FIELD_NUM; y++) {
-                this.setField(new SudokuField(x, y));
+                setField(new SudokuField(x, y));
             }
         }
     }
@@ -77,7 +79,7 @@ public class SudokuBoard {
     }
 
     public void setActiveField(SudokuField field) {
-        Log.d("active: ", (new Integer(field.x)).toString() + ", " + (new Integer(field.y)).toString());
+        Log.d("active: ", (Integer.valueOf(field.x)).toString() + ", " + (Integer.valueOf(field.y)).toString());
         if (this.getActiveField() != null) {
             this.getActiveField().setActive(false);
         }
@@ -87,6 +89,134 @@ public class SudokuBoard {
         this.activeField = field;
     }
 
+    public void checkFieldErrors(SudokuField field) {
+
+        for(int i = 0; i < SudokuBoard.FIELD_NUM; i++) {
+
+            checkFieldCollisions(field.x, i);
+            checkFieldCollisions(i, field.y);
+        }
+
+        Point start = getPartialBoardStartPoint(field);
+        for(int x = start.x; x < start.x + 3; x++) {
+            for(int y = start.y; y < start.y + 3; y++) {
+                checkFieldCollisions(x, y);
+            }
+        }
+    }
+
+    public boolean isValid(SudokuField field) {
+
+        for(int i = 0; i < SudokuBoard.FIELD_NUM; i++) {
+
+            if(hasCollision(field, field.x, i)) {
+                return false;
+            }
+            if (hasCollision(field, i, field.y)) {
+                return false;
+            }
+        }
+
+        Point start = getPartialBoardStartPoint(field);
+        for(int x = start.x; x < start.x + 3; x++) {
+            for(int y = start.y; y < start.y + 3; y++) {
+                if(hasCollision(field, x, y)) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    private boolean hasCollision(SudokuField field, int x, int y) {
+
+        if (field.isEmpty()) {
+            return false;
+        }
+
+        if (field.x == x && field.y == y) {
+            return false;
+        }
+
+        return field.getValue() == getField(x, y).getValue();
+    }
+
+    private void checkFieldCollisions(int fieldX, int fieldY) {
+
+        SudokuField field = getField(fieldX, fieldY);
+        field.removeCollision();
+
+        for(int i = 0; i < SudokuBoard.FIELD_NUM; i++) {
+
+            checkCollision(field, field.x, i);
+            checkCollision(field, i, field.y);
+        }
+
+        Point start = getPartialBoardStartPoint(field);
+        for(int x = start.x; x < start.x + 3; x++) {
+            for(int y = start.y; y < start.y + 3; y++) {
+                checkCollision(field, x, y);
+            }
+        }
+    }
+
+    private void checkCollision(SudokuField field, int x, int y) {
+
+        if (hasCollision(field, x, y)) {
+            field.setCollision();
+        }
+    }
+
+    private Point getPartialBoardStartPoint(SudokuField field) {
+        return new Point(field.x-field.x%3, field.y-field.y%3);
+    }
+
+    public boolean isValid() {
+        SudokuField field;
+        for(int y = 0; y < SudokuBoard.FIELD_NUM; y++) {
+            for(int x = 0; x < SudokuBoard.FIELD_NUM; x++) {
+                field = getField(x, y);
+                if (!isValid(field)) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
 
 
+    public boolean isSolved() {
+        return isFulfilled() && isValid();
+    }
+
+    private boolean isFulfilled() {
+
+        for(int y = 0; y < SudokuBoard.FIELD_NUM; y++) {
+            for(int x = 0; x < SudokuBoard.FIELD_NUM; x++) {
+                if (getField(x, y).isEmpty()) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    public void applyLevel(int level) {
+
+        SudokuField field;
+        for(int y = 0; y < SudokuBoard.FIELD_NUM; y+=3) {
+            for(int x = 0; x < SudokuBoard.FIELD_NUM; x+=3) {
+                int removed = 0;
+                while (removed < level) {
+
+                    field = getField(SudokuUtil.random(x, x + 3), SudokuUtil.random(y, y + 3));
+
+                    if (!field.isEditable()) {
+                        field.initEditableField();
+                        removed++;
+                    }
+                }
+            }
+        }
+    }
 }
